{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 256,
  "lineage": "5347e55d-0e34-5a89-642e-daaedc38c43b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-tier-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:loadbalancer/app/web-tier-lb/f6e8139a2384898e",
            "arn_suffix": "app/web-tier-lb/f6e8139a2384898e",
            "dns_name": "web-tier-lb-685680400.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:889473501810:loadbalancer/app/web-tier-lb/f6e8139a2384898e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-tier-lb",
            "security_groups": [
              "sg-0777574d96255e94a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0166320b56ea2c7c3"
              },
              {
                "subnet_id": "subnet-02246346e41f26b7b"
              }
            ],
            "subnets": [
              "subnet-0166320b56ea2c7c3",
              "subnet-02246346e41f26b7b"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0597074cbd4d61848",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.web-tier-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-lb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:listener/app/web-tier-lb/f6e8139a2384898e/7aab1be0b3b312ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:targetgroup/web-tier-tg/046cbeee3eea5818",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:889473501810:listener/app/web-tier-lb/f6e8139a2384898e/7aab1be0b3b312ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:loadbalancer/app/web-tier-lb/f6e8139a2384898e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.web-tier-lb",
            "aws_lb_target_group.web-tier-tg",
            "aws_security_group.web-tier-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "host_based_weighted_routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:targetgroup/web-tier-tg/046cbeee3eea5818",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:listener-rule/app/web-tier-lb/f6e8139a2384898e/7aab1be0b3b312ea/1815541d6d15d5ed",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:889473501810:listener-rule/app/web-tier-lb/f6e8139a2384898e/7aab1be0b3b312ea/1815541d6d15d5ed",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:listener/app/web-tier-lb/f6e8139a2384898e/7aab1be0b3b312ea",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.web-tier-lb",
            "aws_lb_listener.web-lb-listener",
            "aws_lb_target_group.web-tier-tg",
            "aws_security_group.web-tier-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tier-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:889473501810:targetgroup/web-tier-tg/046cbeee3eea5818",
            "arn_suffix": "targetgroup/web-tier-tg/046cbeee3eea5818",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-320",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:889473501810:targetgroup/web-tier-tg/046cbeee3eea5818",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "web-tier-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0597074cbd4d61848"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:security-group/sg-0777574d96255e94a",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0777574d96255e94a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg",
            "name_prefix": "",
            "owner_id": "889473501810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0597074cbd4d61848"
          }
        }
      ]
    }
  ]
}